<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="0.92"
            android:text="@string/harmWlaczharm"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ToggleButton
            android:id="@+id/dodWlacz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:text="@string/harmRodzaj"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/zmiana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zmien" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.62" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <Button
            android:id="@+id/harmAnl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:text="@string/harmAnl" />

        <Button
            android:id="@+id/harmDod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.26"
            android:text="@string/dodaj" />

        <Button
            android:id="@+id/harmUsun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:text="@string/usun" />

    </LinearLayout>

</LinearLayout>