<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left|right"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.80" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_weight="1.0"
            android:gravity="center" >

            <ToggleButton
                android:id="@+id/brama"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1.5"
                android:textOff="@string/brama"
                android:textOn="@string/brama"
                android:text="@string/brama" />

            <Button
                android:id="@+id/woda"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/woda" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center" >

            <Button
                android:id="@+id/rolety"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1.5"
                android:text="@string/rolety" />

            <ToggleButton
                android:id="@+id/alarm"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:textOff="@string/alarm"
                android:textOn="@string/alarm"
                android:text="@string/alarm" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center" >

            <Button
                android:id="@+id/ogrod"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:text="@string/ogrod" />

            <Button
                android:id="@+id/harmonogram"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:padding="0px"
                android:paddingLeft="0px"
                android:paddingRight="0px"
                android:text="@string/harmonogram" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="left|right" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.93" >

            <Button
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/status" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0" >

            <Button
                android:id="@+id/koniec"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/koniec" >
			</Button>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
