<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statBr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/brama"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/statBr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Zamknieta"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/statBrZm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zmien" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statWd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/woda"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/statWd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="70st"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/statWdZm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zmien" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statRol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rolety"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/statRol2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0%"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/statRolZm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zmien" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/statAlr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alarm"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/statAlr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Uzbrojony"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/statAlrZm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zmien" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/statOg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/ogrod"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/statOg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="17:00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/statOgZm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:text="@string/zmien" />
    </TableRow>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.59"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/statWr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wroc" />

    </LinearLayout>

</LinearLayout>